project name changed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Git </title>
 </head>
 <body>
+    <b>CalCulator</b>
     <h1> Git Sessions</h1>
     <span>Multiplication</span>
     <p>Sub</p>>
